# synth-mind

./: .env.example  .gitignore  AUDIT_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  EVALUATION_REPORT.md  GDIL_COMPLETE.md  KEYWORDS.md  LICENSE  PEER_SETUP.md  PRODUCTION_READINESS.md  QUICKSTART.md  README.md  REFOCUS_PLAN.md  SECURITY.md  SECURITY_REPORT.md  SPEC_SHEET.md  alembic.ini  claude.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  run_synth.py  run_with_dashboard.bat  setup.bat  setup_and_run.bat  start.bat  start_dashboard.bat  test_dashboard_integration.py  test_gdil_integration.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
config/: peers.txt  peers.txt.example  personality.yaml
core/: electric.md  llm_wrapper.py  memory.py  orchestrator.py  tools.py
dashboard/: DASHBOARD_COMPLETE.md  Dashboard  README_DASHBOARD.md  dashboard.html  run_synth_with_dashboard.py  server.py  timeline.html
docs/: GDIL_README.md  PEER_SETUP.md  QUICKSTART.md  Query-Rating.md  Repository-Structure.md  openapi.yaml  system-arch.md
eval/: __init__.py  baseline.py  judge.py  run_eval.py  scenarios.py  synth_agent.py
eval/results/: latest.json
examples/: simple_chat.py
k8s/: README.md
k8s/synth-mind/: Chart.yaml  values.yaml
k8s/synth-mind/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  pvc.yaml  service.yaml  serviceaccount.yaml
migrations/: README.md  env.py
migrations/versions/: 20260101_0000_001_initial_schema.py
monitoring/: README.md  docker-compose.monitoring.yml
monitoring/grafana/: synth-mind-dashboard.json
monitoring/grafana/provisioning/dashboards/: default.yml
monitoring/grafana/provisioning/datasources/: prometheus.yml
monitoring/prometheus/: prometheus.yml
psychological/: assurance_resolution.py  collaborative_projects.py  federated_learning.py  goal_directed_iteration.py  meta_reflection.py  predictive_dreaming.py  project_templates.py  reward_calibration.py  social_companionship.py  temporal_purpose.py
security/: __init__.py  boundary_daemon.py  boundary_siem.py  error_handler.py
tests/: conftest.py  test_core_modules.py  test_eval_integration.py  test_mandelbrot_e2e.py  test_psychological_modules.py  test_security_e2e.py
tests/load/: README.md  load_test.js
utils/: access_logger.py  auth.py  emotion_regulator.py  harvest_patterns.py  ip_firewall.py  logging.py  mandelbrot_weighting.py  metrics.py  ollama_setup.py  prometheus_metrics.py  rate_limiter.py  ssl_utils.py  version_control.py
