[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synth-mind"
version = "0.1.0-alpha"
description = "A Psychologically Grounded AI Agent with Six Cognitive Modules"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Synth Mind Team"}
]
keywords = [
    "ai",
    "agent",
    "llm",
    "cognitive",
    "psychological",
    "anthropic",
    "openai",
    "ollama"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.57.0",
    "aiohttp>=3.11.0",
    "aiohttp-cors>=0.7.0",
    "sqlalchemy>=2.0.0",
    "faiss-cpu>=1.9.0",
    "sentence-transformers>=2.2.0",
    "PyJWT>=2.10.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
monitoring = []

[project.urls]
Homepage = "https://github.com/synth-mind/synth-mind"
Documentation = "https://github.com/synth-mind/synth-mind#readme"
Repository = "https://github.com/synth-mind/synth-mind.git"
Issues = "https://github.com/synth-mind/synth-mind/issues"
Changelog = "https://github.com/synth-mind/synth-mind/blob/main/CHANGELOG.md"

[project.scripts]
synth-mind = "run_synth:main"
synth-dashboard = "dashboard.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "psychological*", "utils*", "dashboard*", "eval*"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | state
)/
'''

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py are ok

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["core", "psychological", "utils", "dashboard", "eval"]
omit = ["**/tests/*", "**/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
